add more javascript tests -rearrange the code and add some comments

--- a/tasks/templates/test.html
+++ b/tasks/templates/test.html
@@ -116,6 +116,15 @@
             </div>
         </div>
     </div>
+
+    <!--Popup Window testing-->
+    <div id="popupContainer">
+    </div>
+
+    <!--Other testing-->
+    <div>
+
+    </div>
 </div>
 <script src="https://code.jquery.com/qunit/qunit-2.20.0.js"></script>
 <script src="{% static 'js/process_notification_delete.js' %}"></script>
@@ -123,4 +132,6 @@
 <script src="{% static 'js/test/test_notifications.js' %}"></script>
 <script src="{% static 'js/viewer_sidebar.js' %}"></script>
 <script src="{% static 'js/test/test_viewer_sidebar.js' %}"></script>
+<script src="{% static 'js/popup_window.js' %}"></script>
+<script src="{% static 'js/test/test_popup_window.js' %}"></script>
 </body>
