--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -42,7 +42,7 @@
 				<div id="outlineView"></div>
 
 				<div id="commentView">
-                    <p id="testComment">Select a mark to leave a comment</p>
+                    <p id="testComment" class="centered-text">Select a mark to leave a comment</p>
 					<div id="voiceRecordContainer">
 						<div id="voiceRecord">
 							<div id="playCircle">
@@ -58,6 +58,17 @@
 						<div id="saveContainer">
 							<button id="save" style="display: none;">Save Comments</button>
 						</div>
+						<br>
+						<div id="refreshContainer" style="display: none;">
+							<p class="centered-text">Voice comments saved</p>
+							<p class="centered-text">
+								Refresh page to view:
+								<button id="refresh"><i class="fas fa-redo"></i></button>
+							</p>
+							<br>
+						</div>
+						<p id="voiceCommentLabel" class="centered-text"> Saved Voice Comments </p>
+						<div id="savedRecordings" data-saved="{{ listOfSavedComments|escapejs }}"></div>
 					</div>
                 </div>
 
