--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -105,7 +105,7 @@
 						<button id="prevSearchResult" class="toolbarButton" title="Previous Search Result">
 							<i class="fa-solid fa-arrow-left"></i>
 						</button>
-						<input id="searchTermInput" type="text" placeholder="Search term..." class="">
+						<input id="searchTermInput" type="text" placeholder="Search term..." class="toolbarField">
 						<button id="nextSearchResult" class="toolbarButton" title="Next Search Result">
 							<i class="fa-solid fa-arrow-right"></i>
 						</button>
