Massive merge complete

--- a/tasks/templates/profile.html
+++ b/tasks/templates/profile.html
@@ -1,8 +1,9 @@
 {% extends 'base_content.html' %}
 {% block content %}
     {% load static %}
-    <div id="popupContainer" class="popup-container">
-        <div id="popupForm" class="popup text-center" style="height: 375px; width: 800px">
+    
+    <div id="popupContainer" class="profile-popup-container">
+        <div id="popupForm" class="profile-popup text-center" style="height: 375px; width: 800px">
             <span id="closePopup" class="close-btn">&times;</span>
             <h1>Update Profile Image</h1>
             <hr>
