--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -118,16 +118,31 @@ h3.profile-title {
 /*
  * Popup window
  */
-.popup-container {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 999;
-    opacity: 0;
+
+.popup-container, .profile-popup-container{
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.profile-popup {
+  border-radius: 25px;
+  border: 2px solid white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  z-index: 1000;
+  height: 300px;
+  width: 300px;
 }
 
 .popup {
@@ -144,6 +159,11 @@ h3.profile-title {
     height: auto;
     width: 80%;
     max-width: 300px;
+}
+
+/* Issa's Popup container */
+.popup-container {
+  opacity: 0;
 }
 
 .popup-container.active {
