Fix share sidebar bug

--- a/tasks/templates/partials/sidebar.html
+++ b/tasks/templates/partials/sidebar.html
@@ -7,6 +7,7 @@
     <!-- A vertical navbar -->
     <!-- Links -->
     {% url 'dashboard' as dashboard %}
+    {% url 'share_file' as share_file %}
     {% url 'upload_file' as upload_file %}
     {% url 'filelist' as filelist %}
     {% url 'shared_file_list' as shared_file_list %}
