--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -675,7 +675,7 @@
 </script>
 <script src="{% static 'js/viewer.js'%}"></script>
 <script src="{% static 'js/viewer_sidebar.js' %}"></script>
-<script src="{% static 'js/voice_comments.js' %}"></script>
+<script src="{% static 'js/voice_comments_menu.js' %}"></script>
 </body>
 </html>
 
