Fix the marking bugs from zoom and selection

--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -490,7 +490,8 @@
 			await renderVisiblePages();
 			isRendering = false;
 
-			setup();
+			//setup();
+			renderAfterZoom();
             viewer.scrollTop = yPercentage * viewer.scrollHeight;
             viewer.scrollLeft = xPercentage * viewer.scrollWidth;
 		}
