--- a/tasks/templates/list_team.html
+++ b/tasks/templates/list_team.html
@@ -57,5 +57,5 @@
             </div>
         </div>
     </div>
-    <script src="{% static 'js/popup_window_create_team.js' %}"></script>
+    <script src="{% static 'js/popup_window.js' %}"></script>
 {% endblock %}
