--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -671,7 +671,9 @@
 	const mark_id = "{{marks.mark_id}}";
 	const marksListOfSpans = "{{marks.listOfSpans}}";
 	const marksListOfComments = "{{marks.listOfComments}}";
-	const upload_id = "{{ upload.id }}"
+	const upload_id = "{{ upload.id }}";
+	const fileOwner = "{{ upload.owner }}";
+	const currentUser = "{{ current_user }}";
 </script>
 <script src="{% static 'js/viewer.js'%}"></script>
 <script src="{% static 'js/viewer_sidebar.js' %}"></script>
