--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script>
 {%load static%}
 {% csrf_token %}
 
@@ -43,29 +46,33 @@
 				
 				<div id="outlineView"></div>
 				<div id="commentView" style="display: flex; flex-direction: column;">
-                    <form id="commentForm" data-id="" method="post" style="margin-bottom: 10px;">
-                        {% csrf_token %}
-                        <div class="form-floating">
-                            <label for="inputComments"></label>
-                            <textarea class="form-control" id="commentInput" name="comments"></textarea>
-                            <label>Comments</label>
-                        </div>
-                        <input type="hidden" id="markIdInput" name="mark_id">
-
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-primary" id="saveButton" onclick="saveComment()">Save</button>
-                        </div>
-                    </form>
-
+                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#commentModal">
+                        + Add Comment
+                    </button>
+                    <button class="btn-primary" id="clear-comments-btn">Clear All</button>
+                    <br>
                     <ul>
                         {% for comment in comments %}
-                        <li>
-                            {{ comment.mark_id }}
-                        </li>
+                            {% if comment.mark_id == current_id %}
+                                <div class="card" style="width: 13rem;">
+                                    <div class="card-header" style="align-items: end">
+                                        <div class="flex items-center mb-6">
+                                            <img src="{{ comment.commenter.mini_gravatar }}" alt="Avatar" class=" rounded-full mr-4">
+                                            {{ comment.commenter }}
+                                        </div>
+                                    </div>
+                                    <div class="card-body"> <p id="comment" style="text-align: center"></p></div>
+                                </div>
+                            {% endif %}
                         {% endfor %}
                     </ul>
+            <div class="toggleContainer">
+                <button class="toggle-button" onclick="toggleInput()">Click to Input</button>
+                <input type="text" class="input-box" id="inputBox" onblur="saveInput()">
+            </div>
+                
 
-                        <p id="comment" style="text-align: center"></p>
+
 
                 </div>
 
@@ -74,6 +81,32 @@
                 </div>
 			</div>
 		</div>
+
+        <!-- comment modal -->
+        <div class="modal fade" id="commentModal" tabindex="-1" aria-labelledby="commentModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="commentModalLabel"></h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form id="commentForm" data-id="" method="post" style="margin-bottom: 10px;">
+                    {% csrf_token %}
+                    <div class="form-floating">
+                        <label for="inputComments"></label>
+                        <textarea class="form-control" id="commentInput" name="comments"></textarea>
+                        <label>Comments</label>
+                    </div>
+                    <input type="hidden" id="markIdInput" name="mark_id">
+                </form>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" id="saveButton" onclick="saveComment()" data-bs-dismiss="modal">Save</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
 		<!-- Main Container -->
 		<div id="mainContainer">
